# pico

ESP01/: CMakeLists.txt  CMakePresets.json
ESP01/.github/: copilot-instructions.md
ESP01/src/: ATmqtt.cpp  ATmqtt.h  Esp01.cpp  Esp01.h  Esp01_util.cpp  motorCtrl.cpp  motorCtrl_util.cpp
ESP01/src/lib/pico_dht/: DHT22.cpp
ESP01/src/lib/tm1637/: CMakeLists.txt  tm1637.cpp
ESP01/tools/: esp_at_probe.py  esp_at_probe_results.txt
blink/: CMakeLists.txt
blink/src/: main.c
blink_simple/: CMakeLists.txt  blink_simple.c
esp01Modem/: CMakeLists.txt
esp01Modem/src/: CMakeLists.txt  esp01Modem.cpp
esp01Modem/src/common/: config.h  topics.h
esp01Modem/src/cpp/: esp01_wrapper.hpp  mqtt_wrapper.hpp  tm1637_wrapper.hpp
esp01Modem/src/lib/esp01/: CMakeLists.txt  esp01.c  esp01.h
esp01Modem/src/lib/mqtt/: CMakeLists.txt  mqtt_client.c  mqtt_client.h
esp01Modem/src/lib/tm1637/: CMakeLists.txt  tm1637.c  tm1637.h
motorCtrl/: .gitignore  CMakeLists.txt
motorCtrl/.github/: copilot-instructions.md
motorCtrl/src/: motorCtrl.cpp  motorCtrl.h  motorCtrl_util.cpp
motorCtrl/src/lib/pico_dht/: CMakeLists.txt  DHT22.h  DHT22_main.cpp
motorCtrl/src/lib/tm1637/: tm1637.cpp  tm1637.h
